crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__map_wrong_pair_empty_used_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data mapData (con (list (pair data integer)) []) of
  DataMap payload#88 -> payload#88
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_89
    (force
      [[[[[[(force (builtin chooseData)) generated_89] (delay (error))]
        (delay [(lam payload_88 payload_88) [(builtin unMapData) generated_89]])]
        (delay (error))]
        (delay (error))]
        (delay (error))]))
    [(builtin mapData) (con (list (pair data integer)) [])]])
--- optimized Core
let anf#2 : Data = mapData (con (list (pair data integer)) []) in
case@Data anf#2 of
  DataMap payload#1 -> payload#1
--- optimized UPLC
(program 1.1.0
  [(lam builtin_6
    [(lam anf_3
      [(lam generated_5
        (force
          [[[[[[builtin_6 generated_5] (delay (error))]
            (delay [(lam payload_4 payload_4) [(builtin unMapData) generated_5]])]
            (delay (error))]
            (delay (error))]
            (delay (error))]))
        anf_3])
      [(builtin mapData) (con (list (pair data integer)) [])]])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
let anf#89 : Data = mapData (con (list (pair data integer)) []) in
case@Data anf#89 of
  DataMap payload#88 -> payload#88
--- isolated folded Core
let data_operand#90 : list (pair Data int) = (con (list (pair data integer)) []) in
let anf#89 : Data = mapData data_operand#90 in
let payload#88 : list (pair Data Data) = data_operand#90 in
payload#88
--- isolated cleaned Core
let data_operand#90 : list (pair Data int) = (con (list (pair data integer)) []) in
let anf#89 : Data = mapData data_operand#90 in
data_operand#90
--- isolated UPLC before
(program 1.1.0
  [(lam anf_89
    [(lam generated_90
      (force
        [[[[[[(force (builtin chooseData)) generated_90] (delay (error))]
          (delay [(lam payload_88 payload_88) [(builtin unMapData) generated_90]])]
          (delay (error))]
          (delay (error))]
          (delay (error))]))
      anf_89])
    [(builtin mapData) (con (list (pair data integer)) [])]])
--- isolated UPLC after
(program 1.1.0
  [(lam data_operand_90
    [(lam anf_89 data_operand_90) [(builtin mapData) data_operand_90]])
    (con (list (pair data integer)) [])])
--- result
error: Runtime(TypeMismatch(List(Pair(Data, Data)), ProtoList(Pair(Data, Integer), [])))
--- logs
[]
