crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__map_wrong_pair_items_used_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data mapData (con (list (pair data integer)) [((I 42), 7)]) of
  DataMap payload#91 -> (con (list (pair data data)) [])
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_92
    (force
      [[[[[[(force (builtin chooseData)) generated_92] (delay (error))]
        (delay (con (list (pair data data)) []))]
        (delay (error))]
        (delay (error))]
        (delay (error))]))
    [(builtin mapData) (con (list (pair data integer)) [((I 42), 7)])]])
--- optimized Core
let anf#2 : Data = mapData (con (list (pair data integer)) [((I 42), 7)]) in
case@Data anf#2 of
  DataMap payload#1 -> (con (list (pair data data)) [])
--- optimized UPLC
(program 1.1.0
  [(lam builtin_6
    [(lam anf_3
      [(lam generated_5
        (force
          [[[[[[builtin_6 generated_5] (delay (error))]
            (delay (con (list (pair data data)) []))]
            (delay (error))]
            (delay (error))]
            (delay (error))]))
        anf_3])
      [(builtin mapData) (con (list (pair data integer)) [((I 42), 7)])]])
    (force (builtin chooseData))])
--- isolated pass
--- isolated ANF input
let anf#92 : Data = mapData (con (list (pair data integer)) [((I 42), 7)]) in
case@Data anf#92 of
  DataMap payload#91 -> (con (list (pair data data)) [])
--- isolated folded Core
let data_operand#93 : list (pair Data int) = (con (list (pair data integer)) [((I 42), 7)]) in
let anf#92 : Data = mapData data_operand#93 in
let payload#91 : list (pair Data Data) = data_operand#93 in
(con (list (pair data data)) [])
--- isolated cleaned Core
let anf#92 : Data = mapData (con (list (pair data integer)) [((I 42), 7)]) in
(con (list (pair data data)) [])
--- isolated UPLC before
(program 1.1.0
  [(lam anf_92
    [(lam generated_93
      (force
        [[[[[[(force (builtin chooseData)) generated_93] (delay (error))]
          (delay (con (list (pair data data)) []))]
          (delay (error))]
          (delay (error))]
          (delay (error))]))
      anf_92])
    [(builtin mapData) (con (list (pair data integer)) [((I 42), 7)])]])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_92 (con (list (pair data data)) []))
    [(builtin mapData) (con (list (pair data integer)) [((I 42), 7)])]])
--- result
error: Runtime(TypeMismatch(List(Pair(Data, Data)), ProtoList(Pair(Data, Integer), [ProtoPair(Data, Integer, Data(Integer(42)), Integer(7))])))
--- logs
[]
