crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__map_wrong_pair_items_used_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@Data mapData (con (list (pair data integer)) [((I 42), 7)]) of
  DataMap payload#94 -> payload#94
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_95
    (force
      [[[[[[(force (builtin chooseData)) generated_95] (delay (error))]
        (delay [(lam payload_94 payload_94) [(builtin unMapData) generated_95]])]
        (delay (error))]
        (delay (error))]
        (delay (error))]))
    [(builtin mapData) (con (list (pair data integer)) [((I 42), 7)])]])
--- optimized Core
let data_operand#3 : list (pair Data int) = (con (list (pair data integer)) [((I 42), 7)]) in
let anf#2 : Data = mapData data_operand#3 in
data_operand#3
--- optimized UPLC
(program 1.1.0
  [(lam data_operand_1
    [(lam anf_4 data_operand_1) [(builtin mapData) data_operand_1]])
    (con (list (pair data integer)) [((I 42), 7)])])
--- isolated pass
--- isolated ANF input
let anf#95 : Data = mapData (con (list (pair data integer)) [((I 42), 7)]) in
case@Data anf#95 of
  DataMap payload#94 -> payload#94
--- isolated folded Core
let data_operand#96 : list (pair Data int) = (con (list (pair data integer)) [((I 42), 7)]) in
let anf#95 : Data = mapData data_operand#96 in
let payload#94 : list (pair Data Data) = data_operand#96 in
payload#94
--- isolated cleaned Core
let data_operand#96 : list (pair Data int) = (con (list (pair data integer)) [((I 42), 7)]) in
let anf#95 : Data = mapData data_operand#96 in
data_operand#96
--- isolated UPLC before
(program 1.1.0
  [(lam anf_95
    [(lam generated_96
      (force
        [[[[[[(force (builtin chooseData)) generated_96] (delay (error))]
          (delay [(lam payload_94 payload_94) [(builtin unMapData) generated_96]])]
          (delay (error))]
          (delay (error))]
          (delay (error))]))
      anf_95])
    [(builtin mapData) (con (list (pair data integer)) [((I 42), 7)])]])
--- isolated UPLC after
(program 1.1.0
  [(lam data_operand_96
    [(lam anf_95 data_operand_96) [(builtin mapData) data_operand_96]])
    (con (list (pair data integer)) [((I 42), 7)])])
--- result
error: Runtime(TypeMismatch(List(Pair(Data, Data)), ProtoList(Pair(Data, Integer), [ProtoPair(Data, Integer, Data(Integer(42)), Integer(7))])))
--- logs
[]
